Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.5.2
-
None
Description
I've got a CMake build with the VS 2010 compiler for which after some time into the build every line (no matter how short) in the "Compiler Output" tab is terminated with the bold string "Additional output omitted" without actually being truncated (as far as I can see).
Attachments
For Gerrit Dashboard: QTCREATORBUG-8004 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
37044,1 | Fix additional output omited warning | 2.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |