Fix additional output omited warning

Task-number: QTCREATORBUG-8004
Change-Id: Ic45d62fe3bf36187bb88a84a019fc00dc01976fc
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>